--- a/Q3/News_tweets_report.Rmd
+++ b/Q3/News_tweets_report.Rmd
@@ -1,4 +1,9 @@
 ---
+output:
+  pdf_document: default
+  html_document: default
+---
+---
 # IMPORTANT: Change settings here, but DO NOT change the spacing.
 # Remove comments and add values where applicable.
 # The descriptions below should be self-explanatory
@@ -91,8 +96,7 @@ output:
     fig_width: 3.5 # Adjust default figure sizes. This can also be done in the chunks of the text.
     fig_height: 3.5
 abstract: |
-  Abstract to be written here. The abstract should not be too long and should provide the reader with a good understanding what you are writing about. Academic papers are not like novels where you keep the reader in suspense. To be effective in getting others to read your paper, be as open and concise about your findings here as possible. Ideally, upon reading your abstract, the reader should feel he / she must read your paper in entirety.
----
+  Not edited as I didnt get to this question report
 
 <!-- First: Set your default preferences for chunk options: -->
 
